--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Python-generated files
+# Python cache and build files
 __pycache__/
 *.py[oc]
 build/
@@ -7,6 +7,7 @@ wheels/
 *.egg-info
 
 # Virtual environments
-.venv
+.venv/
 
-.idea
+# IDE artifacts
+.idea/
