--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "easy-ask"
 version = "0.1.0"
-description = "Add your description here"
+description = "Generate ECharts option dictionaries"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[tool.setuptools.packages.find]
+where = ["src"]
