--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Generate ECharts option dictionaries"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "pytest>=8.4.0",
+]
 
 [tool.setuptools.packages.find]
 where = ["easy_ask"]
