--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -10,8 +10,10 @@
 name: Publish Docker image
 
 on:
-  release:
-    types: [ published ]
+  workflow_run:
+    workflows: [ "CI" ]
+    types:
+      - completed
 
 jobs:
   push_to_registries:
