--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           uv sync
 
+      - name: Activate virtual environment
+        run: |
+          source .venv/bin/activate
+
       - name: Run tests
         run: |
           PYTHONPATH=. pytest
