--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.4.0",
+    "mcp[cli]>=1.9.2",
 ]
 
 [tool.setuptools.packages.find]
