--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: |
-            sheltonsuen/easy-ask
+            sheltonsuen/easyask
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
