--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -10,10 +10,9 @@
 name: Publish PyPI
 
 on:
-  workflow_run:
-    workflows: [ "CI" ]
-    types:
-      - completed
+  push:
+    tags:
+      - "v*"
 
 jobs:
   push_to_pypi:
