--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.4.0",
     "mcp[cli]>=1.9.2",
+    "dashscope>=1.23.4",
 ]
 
 [tool.setuptools.packages.find]
