--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "pytest>=8.4.0",
     "mcp[cli]>=1.9.2",
     "dashscope>=1.23.4",
+    "pydantic-settings>=2.9.1",
 ]
 
 [tool.setuptools.packages.find]
