--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "mcp[cli]>=1.9.2",
     "dashscope>=1.23.4",
     "pydantic-settings>=2.9.1",
+    "colorlog>=6.9.0",
 ]
 
 [tool.setuptools.packages.find]
