--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "easyask"
-version = "0.4.0"
+version = "0.5.0"
 description = "Generate ECharts option dictionaries"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -11,6 +15,9 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "colorlog>=6.9.0",
 ]
+
+[tool.setuptools]
+package-dir = { "" = "easyask" }
 
 [tool.setuptools.packages.find]
 where = ["easyask"]
